Location selector label now gets replaced by a check mark after selecting a location

--- a/FoundIt/Base.lproj/Main.storyboard
+++ b/FoundIt/Base.lproj/Main.storyboard
@@ -182,6 +182,8 @@
                         <outlet property="addLostItemButton" destination="wEk-lp-SQb" id="FHj-h8-BFy"/>
                         <outlet property="colorchange" destination="RfB-vi-0z2" id="Uob-FH-AeA"/>
                         <outlet property="itemSelected" destination="h4a-Zg-kZ7" id="Ooi-ru-ldh"/>
+                        <outlet property="locationCell" destination="Jr1-Q6-klg" id="ud8-vd-cUz"/>
+                        <outlet property="locationLabel" destination="vc5-qR-rUV" id="NW6-z7-mGO"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6he-uf-VfO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1085,7 +1087,11 @@
                     <navigationItem key="navigationItem" title="Found" id="QVY-qD-tUj"/>
                     <connections>
                         <outlet property="colorchange" destination="uzp-FR-G7d" id="u3x-iv-wSA"/>
+                        <outlet property="foundLocationCell" destination="TjL-Qg-52H" id="72p-Cu-WT1"/>
+                        <outlet property="foundLocationLabel" destination="Fji-je-5iA" id="5yx-Lv-uzL"/>
                         <outlet property="itemSelected" destination="mig-Tr-a0R" id="rFe-80-Hp7"/>
+                        <outlet property="turnInCell" destination="CFV-zI-vmK" id="Hwq-Nv-3Gd"/>
+                        <outlet property="turnInLabel" destination="6cz-SZ-xcN" id="BoQ-90-D5e"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f4o-VF-HiD" userLabel="First Responder" sceneMemberID="firstResponder"/>
